# llm-tokenizer

./: .gitignore  pyproject.toml  tokenizer.ipynb
minbpe/: tokenizer.py
src/minbpe/: base.py  basic.py  regex.py
tests/: test.py
tests/data/: llamatext.txt
