[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minbpe"
version = "0.1.0"
description = "Byte pair encoding tokenizer"
authors = [
  { name = "Daniel Di Giovanni", email = "dannyjdigio@gmail.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
